=================
Changes for crash
=================

Unreleased
==========

2014/06/03 0.9.10
=================

 - NULL values are now handled correctly.

2014/06/03 0.9.9
================

 - fix: increased precision of float formatting

2014/06/03 0.9.8
================

 - crash renders complex types as json now instead of python representation

 - fix: update crate-python to 0.10.2 to print -1 for rowcount if rowcount
   is unknown

2014/05/23 0.9.7
================

 - return exit code 1 if the execution of a single command fails

2014/05/20 0.9.6
================

 - bugfix: crash exited immediately with an exception if a query result
   contained an object or array

 - the size of the history file is now limited to 10000 lines

 - stdin is no longer read completely into memory

2014/05/19 0.9.5
================

 - SQL statements passed in via the --command switch take precedence over stdin

2014/05/15 0.9.4
================

 - bugfix: crash exited immediately with an exception if a query result
   contained two or more equal field names

2014/05/09 0.9.3
================

 - bugfix: if crash was started while one of the specified hosts was
   not available crash exited immediately

2014/05/09 0.9.2
================

 - updated crate-python to 0.9.3 to fix import errors

2014/05/09 0.9.1
================

 - added sphinx scripts to generate documentation

 - minor documentation improvements

2014/04/22 0.9.0
================

 - updated crate-python to 0.9.0 which now uses urllib3 instead of requests

 - lines starting with '--' are now ignored.

2014/04/04 0.8.3
================

 - bugfix: update crate-python to 0.8.1 to get correct error handling on connect

2014/04/02 0.8.2
================

 - bugfix: always include argparse in bundle in case it is run on python <= 2.6

2014/03/25 0.8.1
================

 - bugfix: remove pyreadline, which is shading
   builtin or site-packages readline and breaking history and